Update to 1.6.93. Replace some constants